--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false;'
         renderer='antialias: true; alpha: true'>
             <a-camera gps-projected-camera rotation-reader></a-camera>
-            <a-box gps-projected-entity-place='latitude: 50.4345586; longitude: -4.0181349' material='color: red' scale='10 10 10'></a-box>
+            <a-box gps-projected-entity-place='latitude: 50.434582; longitude: -4.0180759' material='color: red' scale='10 10 10'></a-box>
         </a-scene> 
 </body>
 </html>
